--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.10",
-    "gulp-pleeease": "^1.1.0",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-sass": "^1.3.2"
   }
 }
