--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   "homepage": "http://gregburton.github.io/last-week/",
   "devDependencies": {
     "bower": "^1.3.12",
-    "browser-sync": "^2.0.0-rc5",
-    "css": "^2.1.0",
+    "browser-sync": "^2.7.12",
+    "css": "^2.2.1",
     "css-parse": "^2.0.0",
-    "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-basswork": "^0.1.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-basswork": "^0.2.0",
     "gulp-csslint": "^0.1.5",
-    "gulp-minify-css": "^0.4.4",
-    "gulp-rename": "^1.2.0",
+    "gulp-minify-css": "^1.1.6",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.2",
     "gulp-shell": "^0.2.11",
-    "gulp-size": "^1.2.0",
-    "gulp-util": "^3.0.3",
-    "gulp-watch": "^4.1.0",
+    "gulp-size": "^1.2.2",
+    "gulp-util": "^3.0.5",
+    "gulp-watch": "^4.2.4",
     "lodash": "^3.1.0"
   }
 }
