--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-basswork": "^0.2.0",
     "gulp-csslint": "^0.1.5",
+    "gulp-gh-pages": "^0.5.2",
     "gulp-minify-css": "^1.1.6",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.2",
